# es7_project

./: .gitignore  README.md  WindowPlot.py  pyproject.toml  shell.nix  test_config.toml  test_room.toml
code/: .gitignore  container.def  mlp_PSD_WORK.py
code/algorithms/python_isclp_kalman/: ISCLP_KF.py  calc_ISTFT.py  calc_STFT.py  calc_diffcoherence.py  desmooth_GEVD.py  doa2steervec.py  main.py  (+4 more)
code/data_download_script/: data_download_script.py
code/debug/: compare_npy_mat.py
code/metric/: performance_metric_evaluation.py
code/ml/: cnn_test.py  ml_TCN_test.py  mlp_psd.py
code/ml_small_tests/: MLPSDEstimateokay.py  MLP_WORK2.py  clean2distant.py  mlp_project4.py  mlp_project_psd.py  mlp_psd_retf.py
code/room/: rir.py  simple_meeting_rir.py
code/scenario/: example_scenario.json  scenario_generator.py  scenario_runner.py  signal_RIR.py  signal_RIR_convolver.py
code/tools/: compare_wav.py
figures/: pitch_slide.pptx  win0_0_16000.npy  win1_16000_32000.npy  win2_32000_165334.npy
seadge/: config.py  data_download.py  distant.py  enhance.py  metric.py  prepare_psd_tensors.py  psd_model.py  room_generation.py  room_modelling.py  scenario_generation.py  train_psd_model.py
seadge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
seadge/commandline/: clean.py  common.py  datagen.py  dump.py  dumpconfig.py  enhance.py  main.py  metric.py  train.py
seadge/enhancement/: isclp.py
seadge/models/: loss_functions.py  psd_cnn.py  psd_cnn_groups.py  psd_cnn_gru.py  psd_cnn_perframe_mlp.py
seadge/utils/: cache.py  distant_sim.py  dsp.py  files.py  log.py  psd_data_loader.py  psd_dataset.py  scenario.py  stft.py  torch_ddp.py  visualization.py  wavfiles.py
tests/: common.py  test_basics.py  test_room_sim.py  test_scenario.py  test_stft.py  test_stft_visualization.py  test_visualization.py
(+13 files in other folders)
