[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seadge"
version = "0.0.1"
description = "Speech Enhancement Algorithm Data Generation and Evaluation"
requires-python = ">=3.10"
authors = [
  { name = "ESD752" }
]
license = { text = "tbd" }
readme = "README.md"
keywords = ["speech", "audio", "data-generation", "evaluation"]
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "numpy>=2.3",
  "scipy>=1.16",
  "matplotlib>=3.10",
  "pyroomacoustics>=0.7.7",
  "tqdm>=4.67",
  "requests>=2.32",
  "torch>=2.9",
  "scikit-learn>=1.6",
  "pystoi>=0.4.1",
  "pesq>=0.0.4",
  "speechmos>=0.0.1.1",
  "librosa>=0.9.1",
  "onnxruntime>=1.10.0",
  "pandas",
]

# optional URL field based on your setup.py
[project.urls]
homepage = "none"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "docs"]

[project.scripts]
seadge = "seadge.commandline.main:main"
